--- a/html/about.html
+++ b/html/about.html
@@ -3,12 +3,35 @@
   <head>
     <meta charset="UTF-8">
     <title>university</title>
-        <link rel="stylesheet" href="css/style.css">
+    <style>
+      body {
+        margin: 0;
+        font-family: Gill Sans;
+      }
+      body h1,
+      body p {
+        margin: auto;
+        margin-top: 1.2em;
+        width: 80%;
+      }
+    </style>
   </head>
  <body>
   <h1></h1>
   <p>загрузка...</p>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
-  <script src="js/index.js"></script>  
+  <script>
+  $.ajax({
+     url:"https://raw.githubusercontent.com/arsenicum32/ars32data/gh-pages/"+(navigator.language.slice(0,2) || 'en')+"/about.json",
+     dataType: 'json', // Notice! JSONP <-- P (lowercase)
+     success:function(json){
+         $('h1').text(json.h1);
+         $('p').text(json.p);
+     },
+     error:function(){
+         $('h1').text('sww');
+     }
+});
+  </script>
   </body>
 </html>
