--- a/html/about.html
+++ b/html/about.html
@@ -8,7 +8,8 @@
         margin: 0;
         font-family: Gill Sans;
       }
-      .about-bend {
+      .about-bend1,
+      .about-bend2 {
         margin: auto;
         margin-top: 1.2em;
         width: 80%;
@@ -16,16 +17,16 @@
     </style>
   </head>
  <body>
-  <h1 class="about-bend"></h1>
-  <p class="about-bend">загрузка...</p>
+  <h1 class="about-bend1"></h1>
+  <p class="about-bend2">загрузка...</p>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script>
   $.ajax({
      url:"https://raw.githubusercontent.com/arsenicum32/ars32data/gh-pages/"+(navigator.language.slice(0,2) || 'en')+"/about.json",
      dataType: 'json', // Notice! JSONP <-- P (lowercase)
      success:function(json){
-         $('h1 .about-bend').text(json.h1);
-         $('p .about-bend').text(json.p);
+         $('.about-bend1').text(json.h1);
+         $('.about-bend2').text(json.p);
      },
      error:function(){
          $('h1').text('sww');
