--- a/html/about.html
+++ b/html/about.html
@@ -4,10 +4,6 @@
     <meta charset="UTF-8">
     <title>university</title>
     <style>
-      body {
-        margin: 0;
-        font-family: Gill Sans;
-      }
       .about-bend1,
       .about-bend2 {
         margin: auto;
@@ -29,7 +25,7 @@
          $('.about-bend2').text(json.p);
      },
      error:function(){
-         $('h1').text('sww');
+         $('.about-bend1').text('sww');
      }
 });
   </script>
