--- a/html/about.html
+++ b/html/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>university</title>
     <style>
+      body{
+        margin: 0;
+        font-family: Gill Sans;
+      }
       .about-bend1,
       .about-bend2 {
         margin: auto;
