--- a/html/chess.html
+++ b/html/chess.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>university</title>
     <style>
+      body{
+        margin: 0;
+        font-family: Gill Sans;
+      }
       .chess-bend1,
       .chess-bend2,
       .chess-bend3 {
