--- a/html/Im.html
+++ b/html/Im.html
@@ -1,1 +1,41 @@
-<h1>Im page</h1>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>university</title>
+    <style>
+      body{
+        margin: 0;
+        font-family: Gill Sans;
+      }
+      .chess-bend1,
+      .chess-bend2,
+      .chess-bend3 {
+        margin: auto;
+        margin-top: 1.2em;
+        width: 80%;
+        text-decoration: none;
+      }
+    </style>
+  </head>
+ <body>
+  <p class="im-p"></p>
+  <div id='im-links'></div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
+  <script>
+  $.ajax({
+     url:"https://raw.githubusercontent.com/arsenicum32/ars32data/gh-pages/"+(navigator.language.slice(0,2) || 'en')+"/me.json",
+     dataType: 'json', // Notice! JSONP <-- P (lowercase)
+     success:function(json){
+         $('.im-p').text(json.p);
+         for(var n in json.links){
+           $('#im-links').append('<a href="' +json.links[n] + '>'+n+'</a>');
+         }
+     },
+     error:function(){
+         $('h1').text('sww');
+     }
+});
+  </script>
+  </body>
+</html>
