--- a/html/chess.html
+++ b/html/chess.html
@@ -22,7 +22,7 @@
  <body>
   <h2 class="chess-bend1"></h1>
   <p class="chess-bend2">загрузка...</p>
-  <a href='#' id="chess-link">☞</a>
+  <a href='#' id="chess-link" style="font-size: 7em; margin-left: 10%">☞</a>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script>
   $.ajax({
