--- a/html/macbook.html
+++ b/html/macbook.html
@@ -38,8 +38,8 @@
          for(var n in json.works){
            $('#macbook-links').append('\
            <div class="macbook-div">\
-              <h3 style="margin: 0; margin-left: 10%;">'+json.works[n].name+'</h3><br>\
-              <p style="margin: 0; margin-left: 10%;">'+json.works[n].desc+'</p><br>\
+              <h3 style="margin: 0;">'+json.works[n].name+'</h3><br>\
+              <p style="margin: 0;">'+json.works[n].desc+'</p><br>\
               <a href="' +json.works[n].link + '" class="macbook-link" style="font-size: 3em">☞</a><br>\
            </div>');
          }
