--- a/html/macbook.html
+++ b/html/macbook.html
@@ -11,6 +11,7 @@
       .macbook-p{
         margin: auto;
         margin-top: 1.2em;
+        margin-bottom: 3em;
         width: 80%;
       }
       .macbook-div{
