--- a/html/macbook.html
+++ b/html/macbook.html
@@ -39,9 +39,9 @@
          for(var n in json.works){
            $('#macbook-links').append('\
            <div class="macbook-div">\
-              <h3 style="margin: 0;">'+json.works[n].name+'</h3><br>\
-              <p style="margin: 0;">'+json.works[n].desc+'</p><br>\
-              <a href="' +json.works[n].link + '" class="macbook-link" style="font-size: 3em">☞</a><br>\
+              <h3 style="margin: 0;">'+json.works[n].name+'</h3>\
+              <p style="margin: 0;">'+json.works[n].desc+'</p>\
+              <a href="' +json.works[n].link + '" class="macbook-link" style="font-size: 3em">☞</a>\
            </div>');
          }
      },
