--- a/html/gitar.html
+++ b/html/gitar.html
@@ -19,7 +19,7 @@
   </head>
  <body>
   <p class="gitar-p"></p>
-  <a class='gitar-a'>☞</a>
+  <a class='gitar-a' style="font-size: 7em; margin-left: 10%" >☞</a>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script>
   $.ajax({
