--- a/html/Im.html
+++ b/html/Im.html
@@ -16,6 +16,9 @@
         width: 80%;
         text-decoration: none;
       }
+      .im-p{
+        width: 30%;
+      }
     </style>
   </head>
  <body>
