--- a/html/showboard.html
+++ b/html/showboard.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>university</title>
+    <title>snowboard</title>
     <style>
       body{
         margin: 0;
@@ -12,12 +12,12 @@
         margin: auto;
         margin-top: 1.2em;
         width: 80%;
-        text-decoration: none;
+        font-size: 3em;
       }
     </style>
   </head>
  <body>
-  <p class="uni-p"></p>
+  <p class="snowboard-p"></p>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script>
   $.ajax({
