--- a/html/macbook.html
+++ b/html/macbook.html
@@ -9,10 +9,10 @@
         font-family: Gill Sans;
       }
       .macbook-p{
-        margin: auto;
+        margin: 10%;
         margin-top: 1.2em;
         margin-bottom: 3em;
-        width: 80%;
+        width: 30%;
       }
       .macbook-div{
         margin: auto;
