--- a/html/uni.html
+++ b/html/uni.html
@@ -6,7 +6,7 @@
     <style>
       body{
         margin: 0;
-        font-family: Gill Sans;
+        font-family: "Lucida Console", Monaco, monospace
       }
       .uni-p {
         margin: auto;
