--- a/html/uni.html
+++ b/html/uni.html
@@ -6,13 +6,13 @@
     <style>
       body{
         margin: 0;
-        font-family: "Lucida Console", Monaco, monospace
+        font-family: "Lucida Console", Monaco, monospace;
       }
       .uni-p {
         margin: auto;
         margin-top: 1.2em;
         width: 80%;
-        text-decoration: none;
+        font-size: 3em;
       }
     </style>
   </head>
