--- a/html/showboard.html
+++ b/html/showboard.html
@@ -6,7 +6,7 @@
     <style>
       body{
         margin: 0;
-        font-family: "Lucida Console", Monaco, monospace
+        font-family: "Lucida Console", Monaco, monospace;
       }
       .snowboard-p {
         margin: auto;
