--- a/html/order.html
+++ b/html/order.html
@@ -5,8 +5,8 @@
     <title>order</title>
     <style>
     #ffull {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       display: -webkit-box;
       display: -webkit-flex;
       display: -ms-flexbox;
