--- a/html/order.html
+++ b/html/order.html
@@ -44,6 +44,7 @@
     }
     input,
     textarea {
+      font-family: "Lucida Console", Monaco, monospace;
       border: 2px solid #000;
       background: #fff;
       outline: none;
@@ -63,7 +64,7 @@
 
     <div id='ffull'>
   <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
-  <form action="" target="dummyframe" method="POST">
+  <form action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
     <p>Я компания и готов с вами работать</p>
     <input name="entry.1466569310" jsname="L9xHkb" placeholder='имя' />
     <input name="entry.1763318685" jsname="L9xHkb" placeholder='компания' />
