--- a/html/order.html
+++ b/html/order.html
@@ -41,6 +41,9 @@
     }
     #superfiled {
       height: 150px;
+      color: #fff;
+      background: #00f;
+      border: 2px solid #00f;
     }
     input,
     textarea {
@@ -65,7 +68,7 @@
     <div id='ffull'>
   <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
   <form action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
-    <p>Я компания и готов с вами работать</p>
+    <p>Я компания и готов с вами работать на контрактной основе</p>
     <input name="entry.1466569310" jsname="L9xHkb" placeholder='имя' />
     <input name="entry.1763318685" jsname="L9xHkb" placeholder='компания' />
     <input name="entry.580571137" jsname="L9xHkb" placeholder='email или телефон' />
