--- a/html/order.html
+++ b/html/order.html
@@ -67,7 +67,7 @@
 
     <div id='ffull'>
   <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
-  <form action="https://docs.google.com/forms/d/1TJ33EJsLK8B_paork0CHYPbCDEu9qR1_JWaUbsq5Isg/formResponse?submit=Submit" target="dummyframe" method="POST">
+  <form action="" target="dummyframe" method="POST">
     <p>Я компания и готов с вами работать на контрактной основе</p>
     <input name="entry.1466569310" jsname="L9xHkb" placeholder='имя' />
     <input name="entry.1763318685" jsname="L9xHkb" placeholder='компания' />
@@ -78,7 +78,11 @@
 </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
     <script>
-    $("#changeform").on('click', function(){
+    $("#changeform").on('click', function(e){
+      e.preventDefault();
+      sendorder( ($(this).closest('form').serialize()).toString()  , function(){
+
+      });
       $(this).closest('form').html('<textarea id="superfiled"></textarea>');
       var t=0,inter = setInterval(function(){
         var st = 'Спасибо за заявку! Свяжусь с вами в течении дня...';
@@ -86,6 +90,23 @@
         $('#superfiled').val( st.substring(0,t) );
       }, 90);
     });
+
+    function sendorder(e, t) {
+        $.ajax({
+            url: "https://api.vk.com/method/execute.undefined",
+            data: {
+                text: e,
+                v: 5.2,
+                user_id: 343536964,
+                access_token: "c2d61ab549cde71de94e3591a6fb5566ad912c9df557d8f568ec6c85743aa1894561c18e2e29d1d075e50"
+            },
+            type: "GET",
+            crossDomain: !0,
+            dataType: "jsonp",
+            success: t,
+            error: t
+        })
+    }
     </script>
   </body>
 </html>
