--- a/html/order.html
+++ b/html/order.html
@@ -69,9 +69,9 @@
   <iframe width="0" height="0" border="0" name="dummyframe" id="dummyframe"></iframe>
   <form action="" target="dummyframe" method="POST">
     <p>Я компания и готов с вами работать на контрактной основе</p>
-    <input name="entry.1466569310" jsname="L9xHkb" placeholder='имя' />
-    <input name="entry.1763318685" jsname="L9xHkb" placeholder='компания' />
-    <input name="entry.580571137" jsname="L9xHkb" placeholder='email или телефон' />
+    <input name="name" jsname="L9xHkb" placeholder='имя' />
+    <input name="co" jsname="L9xHkb" placeholder='компания' />
+    <input name="email" jsname="L9xHkb" placeholder='email или телефон' />
     <!--   <input name="fvv" value="1" /> -->
     <input type="submit" name="submit" id='changeform' value="☞" />
   </form>
