--- a/order/index.html
+++ b/order/index.html
@@ -50,9 +50,18 @@
     </div>
     <div class="contact">
       <h6>кликните по тексту для редактирования письма *</h6>
-      <p contenteditable="true" id='letter'>Привет! Я <b>Пётр</b>.<br>Я женюсь через два месяца и мне нужен <b>сайт</b>. <b>Готов выделить 80000 из общего бюджета</b> Нужно сверстать главную страницу, нашу историю с анимацией и страницу, где можно получить пригласительный, выложить на хостинг, подобрать домен - вообщем всё под ключ... <br>Можешь позвонить мне или написать на почту: <b><nobr>+7 916 483 5827</nobr><br>post@email.name</b></p><a id="sender" href="#">отправить</a>
+      <p contenteditable="true" id='letter'>
+        Привет!<br>
+        Я Пётр! У меня свадьба через 2 месяца, мне нужен сайт под ключ, где будет:
+        наша история (я видел как ты круто визуализируешь), возможность получить приглашение,
+        и рассадка гостей....<br>
+        Можешь связаться со мной по телефону:<br>
+        8 916 483 5827
+      </p><a id="sender" href="#">отправить</a>
     </div>
   </div>
+  <script src="js/cookie.js"></script>
+  <script src="js/jquery.js"></script>
   <script src="js/index.js"></script>
   </body>
 </html>
