--- a/order/index.html
+++ b/order/index.html
@@ -2,6 +2,8 @@
 <html >
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <title>ars32 form</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
