--- a/m/h/index.html
+++ b/m/h/index.html
@@ -478,7 +478,7 @@ body {
 
         <script>
         window.onload = function(){
-  var debug = /*true ||*/ false;
+  var debug =  false;
   var h = document.querySelector('.heart-wrapper');
 
   function toggleActivate(){
