--- a/m/l/index.html
+++ b/m/l/index.html
@@ -822,7 +822,7 @@
 					<div class="t073__circle t-title" field="number2" style="background-color:#e6b8d9; color:#000000;">5</div>
 				</div>
 				<div class="t073__textwrapper">
-					<div class="t073__title t-title" field="title2">где моя йога</div>					<div class="t073__blockdescr t-text t-text_xs" field="descr2">Be comfortable! You're going to move and your going to sweat! Wear anything that you feel good moving around in. Also, sneakers or "dance sneakers" are the best types of shoes to wear.</div>				</div>
+					<div class="t073__title t-title" field="title2">где моя йога</div>					<div class="t073__blockdescr t-text t-text_xs" field="descr2">feshkfshdkj</div>				</div>
 			</div>
 		</div>
 						<div class="t-col t-col_4">
@@ -880,7 +880,7 @@ $(document).ready(function() {
 <div class="t134">
 	<div class="t-container">
 		<div class="t-col t-col_10 t-prefix_1">
-		<img  id='img' src="images/785d7e01-489c-4962-a909-80ee3287671e__17.png" class="t134__img" imgfield="img" >				<div class="t134__descr" field="descr" style="color:#000000;"><strong>Renner Yoga Studio</strong> 310 Kingsland Road London W10 5BE<br />+40 745 626 8570 classes@renneryoga.com<br />Photographs by <a href="https://www.flickr.com/photos/tshermankb/"><span style="color: rgb(255, 255, 255);">Tucker Sherman</span></a>, <a href="https://www.flickr.com/photos/beatrriza/"><span style="color: rgb(255, 255, 255);">belleaventurière</span></a>,<br /><a href="https://www.flickr.com/photos/poptech/"><span style="color: rgb(255, 255, 255);">PopTech</span></a>,<span style="color: rgb(255, 255, 255);"> </span><a href="https://www.flickr.com/photos/polarity/"><span style="color: rgb(255, 255, 255);">Robert Agthe</span></a> via <a href="https://www.flickr.com/"><span style="color: rgb(255, 255, 255);">Flickr</span></a><br /></div>		</div>
+		<img  id='img' src="images/785d7e01-489c-4962-a909-80ee3287671e__17.png" class="t134__img" imgfield="img" >				<div class="t134__descr" field="descr" style="color:#000000;" id="a"><strong id="b">feshkfshdkj</strong> feshkfshdkj<br />+feshkfshdkj<br />feshkfshdkj <a href="https://www.flickr.com/photos/tshermankb/"><span style="color: rgb(255, 255, 255);">feshkfshdkj</span></a>, <a href="https://www.flickr.com/photos/beatrriza/"><span style="color: rgb(255, 255, 255);">belleaventurière</span></a>,<br /><a href="https://www.flickr.com/photos/poptech/"><span style="color: rgb(255, 255, 255);">PopTech</span></a>,<span style="color: rgb(255, 255, 255);"> </span><a href="https://www.flickr.com/photos/polarity/"><span style="color: rgb(255, 255, 255);">Robert Agthe</span></a> via <a href="https://www.flickr.com/"><span style="color: rgb(255, 255, 255);">Flickr</span></a><br /></div>		</div>
 	</div>
 </div>
 
@@ -933,7 +933,7 @@ $(document).ready(function() {
 <div class="t050">
   <div class="t-container t-align_center">
     <div class="t-col t-col_10 t-prefix_1">
-      <div class="t050__uptitle t-uptitle t-uptitle_sm" field="subtitle">MAUREEN ZEHRING<BR /></div>      <div class="t050__title t-title t-title_xxl" field="title">Не скажу... </div>      <div class="t050__descr t-descr t-descr_xxl" field="descr">скажи пожалуйста, ну же иди сюда, не бойся... </div>    </div>
+      <div class="t050__uptitle t-uptitle t-uptitle_sm" field="subtitle" id="b">feshkfshdkj<BR /></div>      <div class="t050__title t-title t-title_xxl" field="title">Не скажу... </div>      <div class="t050__descr t-descr t-descr_xxl" field="descr" id="a">скажи пожалуйста, ну же иди сюда, не бойся... </div>    </div>
   </div>
 </div>
 
@@ -951,7 +951,7 @@ $(document).ready(function() {
 <div class="t148">
   <div class="t-container_100">
     <div class="t-cover__wrapper t-valign_bottom" style="height:100vh;">
-      <div class="t148__title t-text t-text_sm" field="title" data-animate="fadeInUp">Locally grown grape is cheap and very juicy</div>    </div>
+      <div class="t148__title t-text t-text_sm" field="title" data-animate="fadeInUp" id="b">feshkfshdkj</div>    </div>
   </div>
 </div>
 
@@ -966,7 +966,7 @@ $(document).ready(function() {
 <div class="t120">
   <div class="t-container t-align_left">
     <div class="t-col t-col_8 t-prefix_2">
-      <div class="t120__title t-heading t-heading_sm" field="title">люблю вино</div>      <div class="t120__descr t-descr t-descr_xs" field="subtitle">Projection equipment: slide projectors, presentations, overhead projectors, and computer projectors.</div>    </div>
+      <div class="t120__title t-heading t-heading_sm" field="title" id="a">feshkfshdkj</div>      <div class="t120__descr t-descr t-descr_xs" field="subtitle" id="b">feshkfshdkj</div>    </div>
   </div>
 </div>
 
@@ -977,7 +977,7 @@ $(document).ready(function() {
 <div class="t017">
   <div class="t-container t-align_center">
     <div class="t-col t-col_10 t-prefix_1">
-      <div class="t017__uptitle t-uptitle t-uptitle_md" field="subtitle">BASICS</div>      <div class="t017__title t-title t-title_xxs" field="title">пью сидр</div>          </div>
+      <div class="t017__uptitle t-uptitle t-uptitle_md" field="subtitle">feshkfshdkj</div>      <div class="t017__title t-title t-title_xxs" field="title" id="c">feshkfshdkj</div>          </div>
   </div>
 </div>
 
@@ -1005,15 +1005,15 @@ $(document).ready(function() {
     <div class="t-container">
         <div class="t069__col t-col t-col_4 t069__col t-align_left">
                         <img id='img' src="images/2b267fcf-6386-4c4a-be77-196f1790d65b__4_2227.jpg" class="t069__img" imgfield="img"  />            <div class="t069__textwrapper">
-              <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title">Я чувствительная</div>                <div class="t069__text t-text" field="descr">Visual communication takes place through pictures, graphs and charts, as well as through signs, signals and symbols. It may be used either independently or as an adjunct to the other methods.</div>            </div>
+              <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title" id="a">Я чувствительная</div>                <div class="t069__text t-text" field="descr" id="d">feshkfshdkj</div>            </div>
                     </div>
                 <div class="t069__col t-col t-col_4 t069__col t-align_left">
                         <img id='img'  src="images/a7baa1db-6709-4f40-a81f-d245b1338333__21.jpg" class="t069__img" imgfield="img2"  />            <div class="t069__textwrapper">
-                <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title2">Все мы чувствительные</div>                <div class="t069__text t-text" field="descr2">Symbolization is an important definition for this perspective. Cultural perspective involves identity of symbols. The uses of words that are related with the image, the use of heroes in the image, etc. are the symbolization of the image.</div>            </div>
+                <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title2" id="c">Все мы чувствительные</div>                <div class="t069__text t-text" field="descr2" id="e">feshkfshdkj</div>            </div>
                     </div>
                                 <div class="t069__col t-col t-col_4 t069__col t-align_left">
                         <img id='img'  src="images/1218e9a3-b47c-492e-8c82-270bad812e17__5_6106.jpg" class="t069__img" imgfield="img3"  />            <div class="t069__textwrapper">
-                <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title3">Господи, дорога только вперёд</div>                <div class="t069__text t-text" field="descr3">The view of images in the critical perspective is when the viewers criticise the images, but the critics have been made in interests of the society, although an individual makes the critics.</div>            </div>
+                <div class="t069__sp"></div>                <div class="t069__title t-heading t-heading_md" field="title3" id="b">feshkfshdkj</div>                <div class="t069__text t-text" field="descr3" id="f">feshkfshdkj</div>            </div>
                     </div>
                     </div>
 </div>
@@ -1031,10 +1031,10 @@ $(document).ready(function() {
                     <div class="t186B__blockinput-errors-text t-text t-text_md">
                         <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-all"></p>
                         <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-req">Required field</p>
-                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-email">Please correct e-mail address</p>
-                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-name">Name Wrong. Correct please</p>
-                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-phone">Please correct phone number</p>
-                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-string">Please enter letter, number or punctuation symbols.</p>
+                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-email">feshkfshdkj</p>
+                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-name">feshkfshdkj</p>
+                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-phone">feshkfshdkj</p>
+                        <p class="t186B__blockinput-errors-item js-rule-error js-rule-error-string">feshkfshdkj</p>
                     </div>
                 </div>
                 <div class="js-successbox t186B__blockinput-success t-text t-text_md" style="display:none;">
@@ -1075,14 +1075,14 @@ $(document).ready(function() {
 <div class="t344">
   <div class="t-container t-align_left">
     <div class="t344__col t-col t-col_3">
-      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title" style="color: #525252;">Product</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr" style="color: #ffffff;"><ul> <li>Home page</li> <li>Tour</li> <li>Templates</li></ul></div>    </div>
+      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title" style="color: #525252;" id="d">Product</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr" style="color: #ffffff;" id="b"><ul> <li>Home page</li> <li>Tour</li> <li>Templates</li></ul></div>    </div>
     <div class="t344__col t-col t-col_3">
-      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title2" style="color: #525252;">Education</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr2" style="color: #ffffff;"><ul><li>Workshops</li><li>How to make a website </li><li>Design course </li><li>Explore</li></ul></div>    </div>
+      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title2" style="color: #525252;" id="c">Education</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr2" style="color: #ffffff;" id="a"><ul><li>Workshops</li><li>How to make a website </li><li>Design course </li><li>Explore</li></ul></div>    </div>
     <div class="t344__floatbeaker_lr3"></div>
     <div class="t344__col t-col t-col_3">
-      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title3" style="color: #525252;">Help</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr3" style="color: #ffffff;"><ul><li>Knowledge base </li><li>Video tutorials </li><li>Code Export </li><li>Developers</li></ul></div>    </div>
+      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title3" style="color: #525252;" id="a">Help</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr3" style="color: #ffffff;"><ul><li id="c">feshkfshdkj</li><li>feshkfshdkj </li><li>Code Export </li><li>Developers</li></ul></div>    </div>
     <div class="t344__col t-col t-col_3">
-      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title4" style="color: #525252;">Additional</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr4" style="color: #ffffff;"><ul><li>Blog </li><li>Facebook</li><li>Vacancies</li></ul></div>    </div>
+      <div class="t344__title t-name t-name_xs t344__title_uppercase" field="title4" style="color: #525252;" id="b">Additional</div>      <div class="t344__descr t-descr t-descr_xxs" field="descr4" style="color: #ffffff;"><ul><li>Blog </li><li>Facebook</li><li>Vacancies</li></ul></div>    </div>
   </div>
 </div>
 
@@ -1100,7 +1100,7 @@ $(document).ready(function() {
         <div class="t-col t-col_12">
 			<div class="t-cover__wrapper t-valign_middle" style="height:100vh;">
                 <div class="t102" data-hook-content="covercontent">
-                    <h1 class="t102__title t-title" field="title">это только начало</h1>                    <div class="t102__descr t-descr t-descr_md" field="descr"><span style="font-weight: 500;">The term "fog" is distinguished from the more generic term "cloud" in that fog is low-lying, and the moisture in the fog is often generated locally.</span></div>                    <span class="space"></span>
+                    <h1 class="t102__title t-title" field="title" id="b" >feshkfshdkj</h1>                    <div class="t102__descr t-descr t-descr_md" field="descr"><span style="font-weight: 500;" id="c">feshkfshdkj</span></div>                    <span class="space"></span>
                 </div>
             </div>
         </div>
@@ -1125,7 +1125,7 @@ $(document).ready(function() {
 			<div class="t-cover__wrapper t-valign_middle" style="height:100vh;">
                 <div class="t001 t-align_center">
                   <div class="t001__wrapper" data-hook-content="covercontent">
-                    <div class="t001__uptitle t-uptitle t-uptitle_sm" field="subtitle"><div style="color:rgba(255,255,255,0.7);" data-customstyle="yes">Our Company</div></div>                    <h1 class="t001__title t-title t-title_xl" field="title">Я хочу</h1>                    <div class="t001__descr t-descr t-descr_xl t001__descr_center" field="descr">Art Basel stages art shows for high quality modern and contemporary art and is sited annually in Basel, Miami Beach and Hong Kong</div>                    <span class="space"></span>
+                    <div class="t001__uptitle t-uptitle t-uptitle_sm" field="subtitle"><div style="color:rgba(255,255,255,0.7);" data-customstyle="yes" id="b">feshkfshdkj</div></div>                    <h1 class="t001__title t-title t-title_xl" field="title" id="a">Я хочу</h1>                    <div class="t001__descr t-descr t-descr_xl t001__descr_center" field="descr" id="c">feshkfshdkj</div>                    <span class="space"></span>
                   </div>
                 </div>
             </div>
@@ -1140,6 +1140,8 @@ $(document).ready(function() {
 
 </div>
 <script src='http://chancejs.com/chance.min.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/transparency/0.9.9/transparency.js"></script>
+<script src='../js/mes.js'></script>
 <script src='../js/land.js'></script>
 
 
