--- a/m/1/index.html
+++ b/m/1/index.html
@@ -1,2 +1,29 @@
-<h1>1</h1>
-<script src='../js/tm.js'></script>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>A Pen by  Arseniy</title>
+
+
+
+
+        <link rel="stylesheet" href="css/style.css">
+
+
+
+
+  </head>
+
+  <body>
+
+
+    <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src='http://chancejs.com/chance.min.js'></script>
+
+        <script src="js/index.js"></script>
+
+    <script src='../js/tm.js'></script>
+
+
+  </body>
+</html>
