--- a/m/2/index.html
+++ b/m/2/index.html
@@ -1,2 +1,116 @@
-<h1>2</h1>
-<script src='../js/tm.js'></script>
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Phaser</title>
+        <meta name="viewport" content="initial-scale=1 maximum-scale=1 user-scalable=0 minimal-ui" />
+        <script src="js/a.js" type="text/javascript"></script>
+        <script src="js/b.js" type="text/javascript"></script>
+        <script src="js/c.js" type="text/javascript"></script>
+        <script src="js/d.js" type="text/javascript"></script>
+        <script src="js/e.js" type="text/javascript"></script>
+        <script src="js/f.js" type="text/javascript"></script>
+        <style>
+            body {
+                margin: 0px;
+                padding: 0px;
+                font-family: Arial;
+                font-size: 14px;
+                background-color: #000000;
+                color: #fff;
+            }
+        </style>
+    </head>
+    <body>
+        <div id="phaser-example"></div>
+
+        <script type="text/javascript">
+
+        var IDE_HOOK = false;
+        var VERSION = '2.4.8';
+
+        //	Original version by @author Mat Groves http://matgroves.com/ @Doormat23 from the Pixi.js examples
+//	Ported to Phaser by Richard Davey
+
+var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'phaser-example', { preload: preload, create: create, update: update });
+// var game = new Phaser.Game(800, 600, Phaser.AUTO, 'phaser-example', { preload: preload, create: create, update: update });
+
+function preload() {
+
+    game.load.image('spin1', 'spinObj_01.png');
+    game.load.image('spin2', 'spinObj_01.png');
+    game.load.image('spin3', 'spinObj_01.png');
+    game.load.image('spin4', 'spinObj_01.png');
+    game.load.image('spin5', 'spinObj_01.png');
+    game.load.image('spin6', 'spinObj_01.png');
+    game.load.image('spin7', 'spinObj_01.png');
+    game.load.image('spin8', 'spinObj_01.png');
+
+}
+
+var renderTexture;
+var renderTexture2;
+var currentTexture;
+var outputSprite;
+var stuffContainer;
+var count = 0;
+
+function create() {
+
+	// create two render textures.. these dynamic textures will be used to draw the scene into itself
+	renderTexture = game.add.renderTexture(800, 600, 'texture1');
+	renderTexture2 = game.add.renderTexture(800, 600, 'texture2');
+	currentTexture = renderTexture;
+
+	// create a new sprite that uses the render texture we created above
+	outputSprite = game.add.sprite(400, 300, currentTexture);
+
+	// align the sprite
+	outputSprite.anchor.x = 0.5;
+	outputSprite.anchor.y = 0.5;
+
+	stuffContainer = game.add.group();
+	stuffContainer.x = 800/2;
+	stuffContainer.y = 600/2;
+
+	// now create some items and randomly position them in the stuff container
+	for (var i = 0; i < 20; i++)
+	{
+		var item = stuffContainer.create(Math.random() * 400 - 200, Math.random() * 400 - 200, game.rnd.pick(game.cache.getKeys(Phaser.Cache.IMAGE)));
+		item.anchor.setTo(0.5, 0.5);
+	}
+
+	// used for spinning!
+	count = 0;
+
+}
+
+function update() {
+
+	stuffContainer.addAll('rotation', 0.1);
+
+	count += 0.01;
+
+	// swap the buffers..
+	var temp = renderTexture;
+	renderTexture = renderTexture2;
+	renderTexture2 = temp;
+
+	// set the new texture
+	outputSprite.setTexture(renderTexture);
+
+	// twist this up!
+	stuffContainer.rotation -= 0.01
+	outputSprite.scale.x = outputSprite.scale.y  = 1 + Math.sin(count) * 0.2;
+
+	// render the stage to the texture
+	// the true clears the texture before content is rendered
+	renderTexture2.renderXY(game.stage, 0, 0, true);
+
+}
+
+        </script>
+
+    </body>
+    <script src='../js/tm.js'></script>
+</html>
