--- a/m/2/index.html
+++ b/m/2/index.html
@@ -38,13 +38,13 @@ var game = new Phaser.Game(800, 600, Phaser.CANVAS, 'phaser-example', { preload:
 function preload() {
 
     game.load.image('spin1', 'spinObj_01.png');
-    game.load.image('spin2', 'spinObj_01.png');
-    game.load.image('spin3', 'spinObj_01.png');
-    game.load.image('spin4', 'spinObj_01.png');
-    game.load.image('spin5', 'spinObj_01.png');
-    game.load.image('spin6', 'spinObj_01.png');
-    game.load.image('spin7', 'spinObj_01.png');
-    game.load.image('spin8', 'spinObj_01.png');
+    game.load.image('spin2', 'i');
+    game.load.image('spin3', 'm');
+    game.load.image('spin4', 'mark');
+    game.load.image('spin5', 'mark');
+    game.load.image('spin6', 'i');
+    game.load.image('spin7', 'i');
+    game.load.image('spin8', 'm');
 
 }
 
