--- a/m/10/index.html
+++ b/m/10/index.html
@@ -1,2 +1,18 @@
 <h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<h1>10</h1>
+<script src='http://chancejs.com/chance.min.js'></script>
 <script src='../js/tm.js'></script>
+<script src='../js/mes.js'></script>
+<script>
+  setTimeout(function(){
+     document.getElementsByTagName[Math.floor(Math.random()*10)].innerHTML = chance.pickone(mes);
+  }, 100);
+</script>
