--- a/m/10/index.html
+++ b/m/10/index.html
@@ -14,7 +14,7 @@
 <script src='../js/tm.js'></script>
 <script src='../js/mes.js'></script>
 <script>
-  setTimeout(function(){
+  setInterval(function(){
      document.getElementById("d").getElementsByTagName('h1')[Math.floor(Math.random()*10)].innerHTML = chance.pickone(mes);
   }, 100);
 </script>
