--- a/m/9/index.html
+++ b/m/9/index.html
@@ -1,2 +1,222 @@
-<h1>9</h1>
+<!DOCTYPE html>
+<html >
+  <head>
+    <meta charset="UTF-8">
+    <title>Pulse</title>
+
+
+        <style>
+        @charset "UTF-8";
+@import url("http://fonts.googleapis.com/css?family=Montserrat");
+html {
+  font-family: 'Montserrat', sans-serif;
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  margin: 0;
+  background: #03A9F4;
+  position: relative;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+.t,
+.p {
+  text-align: center;
+  line-height: 100px;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  border-radius: 50%;
+}
+
+.t {
+  z-index: 10;
+  color: #212121;
+  opacity: 0;
+  font-weight: bold;
+  font-size: 1.5rem;
+  -webkit-animation: reveal 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: reveal 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+  -webkit-animation-delay: 18s;
+          animation-delay: 18s;
+  background: #FF0000;
+}
+
+.t:after {
+  content: "終わり";
+  vertical-align: middle;
+  text-align: center;
+  position: absolute;
+  height: 20px;
+  left: 0;
+  top: 38%;
+  width: 100px;
+  line-height: 1;
+}
+
+@-webkit-keyframes reveal {
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes reveal {
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+.p {
+  -webkit-animation: pulse 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+          animation: pulse 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
+}
+
+.p:nth-of-type(1) {
+  background: #E91E63;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  z-index: 1;
+}
+
+.p:nth-of-type(2) {
+  background: #9C27B0;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  z-index: 2;
+}
+
+.p:nth-of-type(3) {
+  background: #673AB7;
+  -webkit-animation-delay: 4s;
+          animation-delay: 4s;
+  z-index: 3;
+}
+
+.p:nth-of-type(4) {
+  background: #009688;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+  z-index: 4;
+}
+
+.p:nth-of-type(5) {
+  background: #FFC107;
+  -webkit-animation-delay: 8s;
+          animation-delay: 8s;
+  z-index: 5;
+}
+
+.p:nth-of-type(6) {
+  background: #FF9800;
+  -webkit-animation-delay: 10s;
+          animation-delay: 10s;
+  z-index: 6;
+}
+
+.p:nth-of-type(7) {
+  background: #FF5722;
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+  z-index: 7;
+}
+
+.p:nth-of-type(8) {
+  background: #00BCD4;
+  -webkit-animation-delay: 14s;
+          animation-delay: 14s;
+  z-index: 8;
+}
+
+.p:nth-of-type(9) {
+  background: #FAFAFA;
+  -webkit-animation-delay: 16s;
+          animation-delay: 16s;
+  z-index: 9;
+}
+
+@-webkit-keyframes pulse {
+  20% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  60% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  60% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  80% {
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  100% {
+    -webkit-transform: scale(100);
+            transform: scale(100);
+  }
+}
+
+@keyframes pulse {
+  20% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  60% {
+    -webkit-transform: scale(0.7);
+            transform: scale(0.7);
+  }
+  60% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  80% {
+    -webkit-transform: scale(0.4);
+            transform: scale(0.4);
+  }
+  100% {
+    -webkit-transform: scale(100);
+            transform: scale(100);
+  }
+}
+
+</style>
+
+
+
+
+  </head>
+
+  <body>
+
+    <div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="p">9</div>
+<div class="t">9</div>
+
+
+
 <script src='../js/tm.js'></script>
+
+
+  </body>
+</html>
